# trunkio-precommit-hook

./: .eslintignore  .gitignore  .pre-commit-hooks.yaml  .prettierrc.js  LICENSE.md  README.md  package.json  setup.cfg  tsconfig.json
.trunk/: trunk.yaml
hooks/: clang_format.py  trunkio.py  utils.py
src/: index.ts
