[metadata]
name = CLinters
version = 1.0.0
description = this is a description.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mark-gutenberger/betterls
author = Mark Gutenberger
author_email = mark-gutenberger@outlook.com
license = GNU GPLv3
license_file = LICENSE.md

[options]
packages = find:
# Follows pre-commit minimums
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
	trunk.io = hooks.trunkio:main
    clang-format-hook = hooks.clang_format:main

[options.packages.find]
exclude =
    tests*
